<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FragmentContainerBase"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSimplePayment"
        style="@style/Button"
        android:enabled="false"
        android:text="@string/dashboard_button_simple_payment"/>

    <Button
        android:id="@+id/btnCoffeePayment"
        style="@style/Button"
        android:text="@string/dashboard_button_coffee_payment"/>

    <Button
        android:id="@+id/btnVoidPayment"
        style="@style/Button"
        android:text="@string/dashboard_button_void_payment"/>

    <Button
        android:id="@+id/btnQueryLastSuccessfulTransaction"
        style="@style/Button"
        android:enabled="false"
        android:text="@string/dashboard_button_query_last_successful_transaction"/>

</LinearLayout>