<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.uol.pagseguro.plugpag.pagcafe.activity.CoffeeSelectionActivity">

    <Button
        android:id="@+id/btnPay"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_pay"/>

    <LinearLayout
        android:id="@+id/container_amount_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPay"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMinus"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_minus"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnPlus"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_plus"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/container_amount_buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCredit"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/credit"/>

        <Button
            android:id="@+id/btnDebit"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/debit"/>

        <Button
            android:id="@+id/btnVoucher"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/voucher"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtCoffeeAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/container_payment_type"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="1 Café"
        android:textIsSelectable="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtTotalValue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/txtCoffeeAmount"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingBottom="30dp"
        android:paddingTop="80dp"
        android:text="R$ 2.65"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold"/>
</RelativeLayout>