<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.uol.pagseguro.plugpag.pagcafe.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:logo="@drawable/logo_pagseguro"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/footerBackground"
        android:elevation="@dimen/toolbar_elevation"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout style="@style/MainFooterRow">

            <TextView
                style="@style/MainFooterLabel"
                android:text="@string/footer_bluetooth"/>

            <TextView
                android:id="@+id/txt_selected_bluetooth_device"
                style="@style/MainFooterContent"/>
        </LinearLayout>

        <LinearLayout style="@style/MainFooterRow">

            <TextView
                style="@style/MainFooterLabel"
                android:text="@string/footer_plugpag_version"/>

            <TextView
                android:id="@+id/txt_plugpag_version"
                style="@style/MainFooterContent"/>
        </LinearLayout>

        <LinearLayout style="@style/MainFooterRow">

            <TextView
                style="@style/MainFooterLabel"
                android:text="@string/footer_network"/>

            <TextView
                android:id="@+id/txt_network_info"
                style="@style/MainFooterContent"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/toolbar"/>

</RelativeLayout>
